# qecnetworks

./: LICENSE  README.md  dataset_preparation.ipynb  input_prep.ipynb  logger.py  test_cls.py  test_rot_sia.py  train_cls.py  train_cls_sia.py
flare/: CMakeLists.txt  README.md  flare_estimation.cpp
models/: point_pose_caps.py  pooling_point_capsule_layer.py  qec_module.py  qec_net.py  qec_sia_net.py  quat_ops.py
models/pytorch-autograd-solver/: setup.py  test.py  test_speed.py  torch_autograd_solver.cpp
models/pytorch-autograd-solver/torch_autograd_solver/: __init__.py
models/pytorch-cusolver/: README.md  setup.py  test.py  torch_cusolver.cpp
my_dataloader/: gen_downsample_m40.py  modelnet_with_lrf_sample_index_loader.py  modelnet_with_lrf_sample_index_loader_sia.py  quat_ops.py  utils.py
