cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(FLARE)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(flare_estimation flare_estimation.cpp)
target_link_libraries(flare_estimation ${PCL_LIBRARIES})